// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyCopy /> does not render content when no \`content\` prop supplied 1`] = `
<div>
  <article
    class="base dark"
    id="Anti-Oxidant"
  >
    <header
      class="base"
      id="Anti-Oxidant"
    >
      <h2
        class="base xLarge dark heading heading"
      >
        Aesop & The Paris Review: A Partnership Extended
      </h2>
      <h3
        class="base mediumWeightFont xXSmall dark eyebrow eyebrow"
      >
        Recommended Nearby
      </h3>
      <h4
        class="base mediumWeightFont xSmall dark subHeading subHeading"
      >
        Active Nutrients
      </h4>
    </header>
    <div
      class="copy"
    >
      Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
    </div>
  </article>
</div>
`;

exports[`<BodyCopy /> should render base component correctly 1`] = `
<div>
  <article
    class="base dark"
    id="Anti-Oxidant"
  >
    <header
      class="base"
      id="Anti-Oxidant"
    >
      <h2
        class="base xLarge dark heading heading"
      >
        Aesop & The Paris Review: A Partnership Extended
      </h2>
      <h3
        class="base mediumWeightFont xXSmall dark eyebrow eyebrow"
      >
        Recommended Nearby
      </h3>
      <h4
        class="base mediumWeightFont xSmall dark subHeading subHeading"
      >
        Active Nutrients
      </h4>
    </header>
    <div
      class="copy"
    >
      Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
    </div>
    <div
      class="contentWrapper"
    >
      <div>
        <a
          class="base blockStyle left dark"
          href="/"
          target="_self"
        >
          Proin vulputate dignissim
        </a>
        <a
          class="base blockStyle left dark"
          href="Quisque lacus"
          target="_self"
        >
          Quisque lacus dolor
        </a>
      </div>
    </div>
  </article>
</div>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` or \`primaryTitle\` prop are passed 1`] = `
<div>
  <article
    class="base dark"
  >
    <header
      class="base"
    >
      <h2
        class="base mediumWeightFont xSmall dark subHeading subHeading"
      >
        Aesop & The Paris Review: A Partnership Extended
      </h2>
    </header>
  </article>
</div>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` prop is passed 1`] = `
<div>
  <article
    class="base dark"
  >
    <header
      class="base"
    >
      <h2
        class="base xLarge dark heading heading"
      >
        Aesop & The Paris Review: A Partnership Extended
      </h2>
    </header>
  </article>
</div>
`;
